--- a/brthdaystyles.css
+++ b/brthdaystyles.css
@@ -1,1 +1,15 @@
-test
+.heading {
+	height: 120px; width: 100%; padding: 10%; font-family: 'Mrs Sheppards', cursive; font-size: 3.998em; 
+	color: snow; text-align: center; background-color: orchid; opacity: 0.5;
+}
+
+.explain {
+	height:30px; width: 100%; font-family: 'Belleza', sans-serif; text-align: center;
+}
+.col-lg-6 {
+	padding: 2%; float: none !important; margin-left: auto; margin-right: auto
+}
+
+.embed_wiki {
+	height: 100%; width: 100%; padding-left: 28%; margin-left: auto; margin-right: auto;
+}
